tools/zed/parsers/asl/test/corpus/basic.txt
==================
enum and type with field
==================

enum Role { Admin, Member }
type A { required x: str; }

---

(source_file
  (enum_type
    name: (type_identifier
      (identifier))
    (enum_value
      (identifier))
    (enum_value
      (identifier)))
  (type_definition
    name: (type_identifier
      (identifier))
    (field_declaration
      name: (field_identifier
        (identifier))
      (type_annotation
        type: (type_identifier
          (identifier))))))

==================
rewrite trigger and function
==================

type A { x: str { rewrite update := datetime_current(); }; trigger t after insert do ( insert L { a := event } ); }

---

(source_file
  (type_definition
    name: (type_identifier
      (identifier))
    (field_declaration
      name: (field_identifier
        (identifier))
      (type_annotation
        type: (type_identifier
          (identifier)))
      (rewrite
        event: (identifier)
        (identifier)))
    (trigger
      name: (field_identifier
        (identifier))
      event: (identifier)
      (aql_block
        (identifier)
        (identifier)
        (identifier)
        (identifier)))))

==================
extension and general function with directives
==================

use extension 'unaccent';

@language plpgsql
@immutable
@strict
function slugify(value: text) -> text {
  return lower(public.unaccent(value));
};

---

(source_file
  (extension_definition
    name: (string))
  (function_definition
    (function_directive
      name: (identifier)
      value: (identifier))
    (function_directive
      name: (identifier))
    (function_directive
      name: (identifier))
    name: (field_identifier
      (identifier))
    (function_param
      name: (identifier)
      type: (type_identifier
        (identifier)))
    returns: (type_identifier
      (identifier))
    body: (return_expression
      (identifier)
      (sql_paren
        (identifier)
        (identifier)
        (sql_paren
          (identifier))))))

==================
rls policy
==================

type KV {
  expires_at: datetime;
  policy hide_expired for select using ( .expires_at >= now() );
}

---

(source_file
  (type_definition
    name: (type_identifier
      (identifier))
    (field_declaration
      name: (field_identifier
        (identifier))
      (type_annotation
        type: (type_identifier
          (identifier))))
    (policy
      name: (field_identifier
        (identifier))
      command: (identifier)
      using: (aql_block
        (identifier)
        (identifier)
        (aql_block)))))

==================
global declaration
==================

global current_user: uuid;
global required tz: str;

---

(source_file
  (global_definition
    name: (field_identifier
      (identifier))
    type: (type_identifier
      (identifier)))
  (global_definition
    name: (field_identifier
      (identifier))
    type: (type_identifier
      (identifier))))
